# endurox-connect

./: .gitignore  Makefile  README.md
doc/: Makefile  Mdoc  nonpers_sync_ex_to_net.dia  nonpers_sync_net_to_ex.dia  pers_async_ex_to_net_wo_corr.dia  pers_async_net_to_ex_w_corr.dia  pers_async_net_to_ex_wo_corr.dia  pers_sync_ex_to_net_connid.dia  pers_sync_net_to_ex.dia  restinout_tutor_1.dia  restinout_user_guide.adoc  tcpgatesv_user_guide.adoc
doc/manpage/: Makefile  restincl.adoc  restoutsv.adoc  tcpgateasv.adoc  tcpgatesv.adoc
go/: Makefile
go/src/: Makefile
go/src/exutil/: Makefile  caroots.go  stopwatch.go
go/src/restincl/: Makefile  README  fileupload.go  restin.ini  restincl.go  transactions.go  viewsupp.go  wokerspool.go  workerpool.go
go/src/restoutsv/: Makefile  dispatch.go  jsonerror.go  periodic.go  restout.ini  restoutsv.go  service.go  viewsupp.go  workerpool.go  xatmipool.go
go/src/tcpgatesv/: Makefile  atmiout.go  conhandler.go  connections.go  msgframe.go  netin.go  outreq.go  outseq.go  periodic.go  srv.go  tcpgatesv.go  test.ini  xatmipool.go
go/src/ubftab/: Exfields  Makefile
go/test_conf/: endurox.ini  ndrxconfig.xml  restin.ini  setndrx
go/test_data/: restin.data  restin_bench.sh
pkg/: CMakeLists.txt  README
tests/: Makefile  run.sh
tests/01_restin/: Makefile  run.sh
tests/01_restin/runtime/conf/: gencert.sh  ndrxconfig.xml  restin.ini
tests/01_restin/runtime/static/: index.html
tests/01_restin/runtime/viewdir/: restin.V
tests/01_restin/src/: Makefile
tests/01_restin/src/testsv/: binary.go  cookies.go  ext.go  fileupload.go  jsonsv.go  regexp.go  testsv.go  textsv.go  viewsv.go
tests/01_restin/src/trancl/: Makefile  trancl.go
tests/01_restin/src/transv/: Makefile  transv.go
tests/01_restin/src/ubftab/: Exfields
tests/01_restin/src/viewdir/: Makefile  restin.v_in
tests/02_tcpgatesv/: run.sh
tests/02_tcpgatesv/runtime/conf/: app.ini  gencert.sh  ndrxconfig.xml  tcpgate.ini
tests/02_tcpgatesv/runtime/ubftab/: test.fd
tests/02_tcpgatesv/src/: Makefile  exutil
tests/02_tcpgatesv/src/testcl/: Makefile  testcl.go
tests/02_tcpgatesv/src/testsv/: Makefile  seqtest.go  testsv.go
tests/02_tcpgatesv/src/ubftab/: Exfields  Makefile  ubftab
tests/03_restout/: run.sh
tests/03_restout/runtime/: test.ud  viewdir
tests/03_restout/runtime/conf/: app.ini  debug.ini  gencert.sh  ndrxconfig.xml  restin.ini  restout.ini
tests/03_restout/src/: Makefile  viewdir
tests/03_restout/src/bigmsgsv/: Makefile  testsv.go
tests/03_restout/src/testcl/: Makefile  testcl.go
tests/03_restout/src/testsv/: jsonsv.go  testsv.go
tests/03_restout/src/ubftab/: Exfields  test.fd
